--- a/Views/Endereco/Deletar.cshtml
+++ b/Views/Endereco/Deletar.cshtml
@@ -4,6 +4,8 @@
 	ViewData["Title"] = "Apagar Endereço";
 }
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
+
 <div class="text-center">
 	<h3>Realmente deseja apagar o endereço (@Model.Logradouro)?</h3>
 </div>
