--- a/Views/Endereco/Editar.cshtml
+++ b/Views/Endereco/Editar.cshtml
@@ -1,5 +1,127 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model EnderecoModel
+
 @{
+	ViewData["Title"] = "Cadastrar Novo Endereço";
 }
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
+<link href="~/css/styles.css" rel="stylesheet" />
+
+<script>
+	jQuery(function ($) {
+		$("#cep").mask("99.999-999");
+
+		function limpa_formulario_cep() {
+			$("#logradouro").val("");
+			$("#complemento").val("");
+			$("#bairro").val("");
+			$("#cidade").val("");
+			$("#uf").val("");
+		}
+
+		$("#cep").blur(function () {
+			var cep = $(this).val().replace(/\D/g, '');
+
+			if (cep != "") {
+
+				var validacep = /^[0-9]{8}$/;
+
+				if (validacep.test(cep)) {
+					$("#logradouro").val("...")
+					$("#bairro").val("...")
+					$("#complemento").val("...")
+					$("#cidade").val("...")
+					$("#uf").val("...")
+
+					$.getJSON("//viacep.com.br/ws/" + cep + "/json/?callback=?", function (dados) {
+
+						if (!("erro" in dados)) {
+							$("#logradouro").val(dados.logradouro);
+							$("#bairro").val(dados.bairro);
+							$("#complemento").val(dados.complemento);
+							$("#cidade").val(dados.localidade);
+							$("#uf").val(dados.uf);
+						}
+						else {
+							limpa_formulario_cep();
+							alert("CEP não encontrado.");
+						}
+					});
+				}
+				else {
+					limpa_formulario_cep();
+					alert("Formato de CEP inválido.");
+				}
+			}
+			else {
+				limpa_formulario_cep();
+			}
+		});
+	});
+</script>
+
+<div class="text-center">
+	<div id="booking" class="section">
+		<div class="section-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7 col-md-push-5">
+						<div class="booking-cta">
+							<h1 class="display-4">Cadastrar Endereço</h1>
+							<p>
+
+							</p>
+						</div>
+					</div>
+					<div class="col-md-4 col-md-pull-7">
+						<div class="booking-form">
+							<form asp-controller="Endereco" asp-action="Criar" method="post">
+								<div class="form-group">
+									<span class="form-label">CEP</span>
+									<input class="form-control" type="text" asp-for="Cep" id="cep" name="cep" placeholder="CEP" required>
+								</div>
+								<div class="row">
+									<div class="form-group">
+										<span class="form-label">Logradouro (Rua, Avenida, Alameda, etc)</span>
+										<input class="form-control" type="text" asp-for="Logradouro" id="logradouro" name="logradouro" placeholder="Logradouro" required>
+									</div>
+									<div class="form-group">
+										<div class="form-group">
+											<span class="form-label">Complemento (se não souber, digite casa)</span>
+											<input class="form-control" type="text" asp-for="Complemento" id="complemento" name="complemento" placeholder="Complemento" required>
+										</div>
+									</div>
+								</div>
+
+								<div class="row">
+									<div class="form-group">
+										<span class="form-label">Bairro</span>
+										<input class="form-control" type="text" asp-for="Bairro" id="bairro" name="bairro" placeholder="Bairro" required>
+									</div>
+
+									<div class="col-sm-8">
+										<div class="form-group">
+											<span class="form-label">Cidade</span>
+											<input class="form-control" type="text" asp-for="Cidade" id="cidade" name="cidade" placeholder="Cidade" required>
+										</div>
+									</div>
+									<div class="col-sm-4">
+										<div class="form-group">
+											<span class="form-label">UF</span>
+											<input class="form-control" type="text" asp-for="UF" id="uf" name="uf" placeholder="UF" required>
+										</div>
+									</div>
+								</div>
+
+								<div class="d-grid gap-2">
+									<button class="btn btn-primary btn-lg" type="submit">Cadastrar Endereço</button>
+									<a class="btn btn-secondary btn-lg" asp-controller="Endereco" asp-action="Index">Voltar</a>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
