--- a/Views/Endereco/Novo.cshtml
+++ b/Views/Endereco/Novo.cshtml
@@ -4,6 +4,7 @@
 	ViewData["Title"] = "Cadastrar Novo Endereço";
 }
 
+
 <script>
 	jQuery(function ($) {
 		$("#cep").mask("99.999-999");
@@ -65,15 +66,12 @@
 				<div class="row">
 					<div class="col-md-7 col-md-push-5">
 						<div class="booking-cta">
-							<h1 class="display-4">Cadastrar Endereço</h1>
-							<p>
-
-							</p>
+							<h1 class="display-4">Cadastrar Endereço</h1>							
 						</div>
 					</div>
 					<div class="col-md-4 col-md-pull-7">
 						<div class="booking-form">
-							<form asp-controller="Endereco" asp-action="Criar" method="post">
+							<form asp-controller="Endereco" asp-action="Novo" method="post">
 								<div class="form-group">
 									<span class="form-label">CEP</span>
 									<input class="form-control" type="text" asp-for="Cep" id="cep" name="cep" placeholder="CEP" required>
@@ -115,6 +113,7 @@
 									<button class="btn btn-primary btn-lg" type="submit">Cadastrar Endereço</button>
 									<a class="btn btn-secondary btn-lg" asp-controller="Endereco" asp-action="Index">Voltar</a>
 								</div>
+
 							</form>
 						</div>
 					</div>
