--- a/Views/Endereco/Editar.cshtml
+++ b/Views/Endereco/Editar.cshtml
@@ -67,7 +67,7 @@
 				<div class="row">
 					<div class="col-md-7 col-md-push-5">
 						<div class="booking-cta">
-							<h1 class="display-4">Cadastrar Endereço</h1>
+							<h1 class="display-4">Editar Endereço</h1>
 							<p>
 
 							</p>
@@ -75,7 +75,7 @@
 					</div>
 					<div class="col-md-4 col-md-pull-7">
 						<div class="booking-form">
-							<form asp-controller="Endereco" asp-action="Criar" method="post">
+							<form asp-controller="Endereco" asp-action="Alterar" method="post">
 								<div class="form-group">
 									<span class="form-label">CEP</span>
 									<input class="form-control" type="text" asp-for="Cep" id="cep" name="cep" placeholder="CEP" required>
@@ -114,7 +114,7 @@
 								</div>
 
 								<div class="d-grid gap-2">
-									<button class="btn btn-primary btn-lg" type="submit">Cadastrar Endereço</button>
+									<button class="btn btn-primary btn-lg" type="submit">Editar Endereço</button>
 									<a class="btn btn-secondary btn-lg" asp-controller="Endereco" asp-action="Index">Voltar</a>
 								</div>
 							</form>
