--- a/Views/Endereco/Editar.cshtml
+++ b/Views/Endereco/Editar.cshtml
@@ -4,8 +4,8 @@
 	ViewData["Title"] = "Cadastrar Novo Endereço";
 }
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
-<link href="~/css/styles.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-inputmask@1.0.1/index.min.js"></script>
 
 <script>
 	jQuery(function ($) {
@@ -67,15 +67,13 @@
 				<div class="row">
 					<div class="col-md-7 col-md-push-5">
 						<div class="booking-cta">
-							<h1 class="display-4">Editar Endereço</h1>
-							<p>
-
-							</p>
+							<h1 class="display-4">Editar Endereço</h1>							
 						</div>
 					</div>
 					<div class="col-md-4 col-md-pull-7">
 						<div class="booking-form">
 							<form asp-controller="Endereco" asp-action="Alterar" method="post">
+								<input type="hidden" asp-for="Id" />
 								<div class="form-group">
 									<span class="form-label">CEP</span>
 									<input class="form-control" type="text" asp-for="Cep" id="cep" name="cep" placeholder="CEP" required>
