--- a/Views/Endereco/Deletar.cshtml
+++ b/Views/Endereco/Deletar.cshtml
@@ -7,10 +7,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
 
 <div class="text-center">
-	<h3>Realmente deseja apagar o endereço (@Model.Logradouro)?</h3>
+	<h3>Realmente deseja apagar o endereço @Model.Logradouro do CE @Model.Cep?</h3>
 </div>
 
 <div class="d-grid gap-2">
-	<a class="btn btn-primary btn-lg" role="button" asp-action="Index" asp-controller="Endereco">Cancelar Exclusão</a>
-	<a class="btn btn-danger btn-lg" role="button" asp-action="Apagar" asp-controller="Endereco" asp-route-id="@Model.Id">Confirmar Exclusão</a>
+	<a class="btn btn-primary btn-lg" role="button" asp-controller="Endereco" asp-action="Index">Cancelar Exclusão</a>
+	<a class="btn btn-danger btn-lg" role="button" asp-controller="Endereco" asp-action="Apagar" asp-route-id="@Model.Id">Confirmar Exclusão</a>
 </div>
