--- a/Views/Endereco/Index.cshtml
+++ b/Views/Endereco/Index.cshtml
@@ -46,7 +46,7 @@
 						<td>
 							<div class="btn-group">
 								<a class="btn btn-primary" asp-route-id="@endereco.Id" asp-controller="Endereco" asp-action="Editar">Editar Endereço</a>
-								<a class="btn btn-danger" asp-route-id="@endereco.Id" asp-controller="Endereco" asp-action="Deletar">Deletar Endereço</a>
+								<a class="btn btn-danger" asp-route-id="@endereco.Id" asp-controller="Endereco" asp-action="DeletarConfirmacao">Deletar Endereço</a>
 							</div>
 						</td>
 					</tr>
