Renomeada view Deletar para DeletarConfirmacao

--- a/Views/Endereco/DeletarConfirmacao.cshtml
+++ b/Views/Endereco/DeletarConfirmacao.cshtml
@@ -12,5 +12,5 @@
 
 <div class="d-grid gap-2">
 	<a class="btn btn-primary btn-lg" role="button" asp-controller="Endereco" asp-action="Index">Cancelar Exclusão</a>
-	<a class="btn btn-danger btn-lg" role="button" asp-controller="Endereco" asp-action="Apagar" asp-route-id="@Model.Id">Confirmar Exclusão</a>
+	<a class="btn btn-danger btn-lg" role="button" asp-controller="Endereco" asp-action="Deletar" asp-route-id="@Model.Id">Confirmar Exclusão</a>
 </div>
