--- a/Views/Sign/Index.cshtml
+++ b/Views/Sign/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model UsuarioModel
+
+@{
 	ViewData["Title"] = "Login";
 }
 
@@ -20,11 +22,13 @@
 							<form method="post">
 								<div class="form-group">
 									<span class="form-label">Nome de Usuário</span>
-									<input class="form-control" type="text" id="usuario" name="usuario" placeholder="Nome de Usuário" required>
+									<input class="form-control" type="text" id="usuario" name="usuario" placeholder="Nome de Usuário">
+									@Html.ValidationMessageFor(x => x.Login)
 								</div>
 								<div class="form-group">
 									<span class="form-label">Senha</span>
-									<input class="form-control" type="password" id="senha" name="senha" placeholder="Senha" required>
+									<input class="form-control" type="password" id="senha" name="senha" placeholder="Senha">
+									@Html.ValidationMessageFor(x => x.Senha)
 								</div>
 
 								<div class="d-grid gap-2">
