--- a/Views/Endereco/Index.cshtml
+++ b/Views/Endereco/Index.cshtml
@@ -6,16 +6,33 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
 
+
+<div class="d-grid gap-2 d-md-flex justify-content-md-start">
+		<a class="btn btn-primary" role="button" asp-controller="Endereco" asp-action="Novo">Adicionar Novo Endereço</a>
+	</div>
+
+	<br />
+
+	@if(TempData["MsgSucesso"] != null) 
+	{
+	<div class="alert alert-success" role="alert">
+		@TempData["MsgSucesso"];
+	</div>
+	}
+
+	@if(TempData["MsgErro"] != null) 
+	{
+	<div class="alert alert-danger" role="alert">
+			@TempData["Erro"];
+	</div>
+	}
+
 <h1 class="display-4">Endereços Cadastrados</h1>
 
 <br />
 
 <div class="text-center">
-	<div class="d-grid gap-2 d-md-flex justify-content-md-start">
-		<a class="btn btn-primary" role="button" asp-controller="Endereco" asp-action="Novo">Adicionar Novo Endereço</a>
-	</div>
-
-	<br />
+	
 
 	<table class="table">
 		<thead>
