--- a/Views/Endereco/Index.cshtml
+++ b/Views/Endereco/Index.cshtml
@@ -21,7 +21,7 @@
 <div class="text-center">
 	
 
-	<table class="table">
+	<table class="table" id="enderecos" name="enderecos">
 		<thead>
 			<tr>
 				<th scope="col">ID</th>				
@@ -58,6 +58,8 @@
 			}
 		</tbody>
 	</table>
+	<br />
+
 	<div class="">
 		<a role="button" class="btn btn-primary btn-lg" asp-controller="Endereco" asp-action="Exportar">Exportar para CSV</a>
 	</div>
