Usuario Controller modificado

--- a/Views/Sign/Index.cshtml
+++ b/Views/Sign/Index.cshtml
@@ -31,6 +31,7 @@
 
 								<div class="d-grid gap-2">
 									<button class="btn btn-primary btn-lg" type="submit">Login</button>
+									<button class="btn btn-primary btn-lg" type="submit">Cadastrar Novo Usuário</button>
 								</div>
 							</form>
 						</div>
