--- a/Views/Endereco/Index.cshtml
+++ b/Views/Endereco/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/datatables@1.10.18/media/js/jquery.dataTables.min.js" integrity="sha256-3aHVku6TxTRUkkiibvwTz5k8wc7xuEr1QqTB+Oo5Q7I=" crossorigin="anonymous"></script>
+<link href="~/css/onepage.css" rel="stylesheet" />
 
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
