--- a/Views/Endereco/Editar.cshtml
+++ b/Views/Endereco/Editar.cshtml
@@ -4,6 +4,8 @@
 	ViewData["Title"] = "Cadastrar Novo Endereço";
 }
 
+<link href="~/css/styles.css" rel="stylesheet" />
+
 <script>
 	jQuery(function ($) {
 		$("#cep").mask("99.999-999");
