--- a/Views/Endereco/Novo.cshtml
+++ b/Views/Endereco/Novo.cshtml
@@ -6,6 +6,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-inputmask@1.0.1/index.min.js"></script>
+<link href="~/css/styles.css" rel="stylesheet" />
 
 <script>
 	jQuery(function ($) {
@@ -61,7 +62,6 @@
 </script>
 
 <div class="text-center">
-
 	<div id="booking" class="section">
 		<div class="section-center">
 			<div class="container">
