--- a/wwwroot/css/onepage.css
+++ b/wwwroot/css/onepage.css
@@ -1,5 +1,15 @@
 ﻿@charset "UTF-8";
-
+/*!
+* Start Bootstrap - Freelancer v7.0.7 (https://startbootstrap.com/theme/freelancer)
+* Copyright 2013-2023 Start Bootstrap
+* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-freelancer/blob/master/LICENSE)
+*/
+/*!
+ * Bootstrap  v5.2.3 (https://getbootstrap.com/)
+ * Copyright 2011-2022 The Bootstrap Authors
+ * Copyright 2011-2022 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
@@ -12541,6 +12551,26 @@ html {
             }
 }
 
+.form-floating input.form-control,
+.form-floating textarea.form-control {
+    font-size: 1.5rem;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    border-radius: 0;
+    border-width: 1px;
+}
+
+    .form-floating input.form-control:focus,
+    .form-floating textarea.form-control:focus {
+        box-shadow: none;
+    }
+
+.form-floating label {
+    font-size: 1.5rem;
+    color: #6c757d;
+}
+
 .masthead {
     padding-top: calc(6rem + 74px);
     padding-bottom: 6rem;
@@ -12575,4 +12605,57 @@ html {
         }
 }
 
+.portfolio .portfolio-item {
+    cursor: pointer;
+    position: relative;
+    display: block;
+    max-width: 25rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
 
+    .portfolio .portfolio-item .portfolio-item-caption {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 0.2s ease-in-out;
+        opacity: 0;
+        background-color: rgba(26, 188, 156, 0.9);
+    }
+
+        .portfolio .portfolio-item .portfolio-item-caption:hover {
+            opacity: 1;
+        }
+
+        .portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
+            font-size: 1.5rem;
+        }
+
+.portfolio-modal .btn-close {
+    color: #1abc9c;
+    font-size: 2rem;
+    padding: 1rem;
+}
+
+.portfolio-modal .portfolio-modal-title {
+    font-size: 2.25rem;
+    line-height: 2rem;
+}
+
+@media (min-width: 992px) {
+    .portfolio-modal .portfolio-modal-title {
+        font-size: 3rem;
+        line-height: 2.5rem;
+    }
+}
+
+.footer {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-color: #2c3e50;
+    color: #fff;
+}
+
+.copyright {
+    background-color: #1a252f;
+}
